--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "next": "15.0.2",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "the-new-css-reset": "^1.11.3"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
     "@types/node": "^20.17.3",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.6.3"
   }
 }
