--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "15.0.2",
     "next-mdx-remote": "^5.0.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "the-new-css-reset": "^1.11.3"
   },
   "devDependencies": {
-    "@types/node": "^20.17.3",
+    "@content-collections/core": "^0.7.3",
+    "@content-collections/next": "^0.2.3",
+    "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "typescript": "^5.6.3"
